# geary

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.icons  COPYING.snowball  Cargo.toml  INSTALL  LICENSE.md  MAINTAINERS  Makefile  Makefile.in  NEWS  README  README.md  THANKS  cmake_uninstall.cmake.in  code-of-conduct.md  configure  configure.in  console  geary  geary.desktop  geary.doap  gnome-tour.doap  meson.build  meson.options  meson_options.txt  org.gnome.Geary.json  org.gnome.Geary.yaml  org.gnome.Geary.yml  rustfmt.toml  waf  wscript
bindings/: meson.build
bindings/gir/: WebKit-3.0.gir
bindings/metadata/: JSCore-3.0.metadata  WebKit2-4.0.metadata  WebKit2WebExtension-4.0.metadata
bindings/vapi/: Makefile  config.vapi  enchant-2.vapi  gmime-2.6.vapi  icu-uc.vapi  javascriptcore-4.0.vapi  libnotify.vapi  libstemmer.vapi  libunwind.vapi  libytnef.vapi  unique-3.0.vapi  unity.deps  unity.vapi
data/: meson.build  org.gnome.Tour.desktop.in.in  org.gnome.Tour.gschema.xml.in  org.gnome.Tour.metainfo.xml.in.in  resources.gresource.xml
data/resources/: style.css
desktop/: CMakeLists.txt  geary  geary-attach  geary-attach.contract.desktop.in  geary-attach.contract.in  geary-autostart.desktop.in  geary-autostart.desktop.in.in  geary.appdata.xml  geary.appdata.xml.in  geary.desktop  geary.desktop.in  meson.build  org.gnome.Geary.appdata.xml.in  org.gnome.Geary.appdata.xml.in.in  org.gnome.Geary.desktop.in  org.gnome.Geary.desktop.in.in  org.gnome.Geary.gschema.xml  org.gnome.Geary.metainfo.xml.in.in  org.gnome.Geary.service.in  org.yorba.geary.gschema.xml
help/: CMakeLists.txt  LINGUAS  Makefile.am  conversation.page  editor.page  index.page  meson.build  send.page  shortcuts.page  spell.page  star.page
help/C/: accounts.page  archive.page  bugs.page  contributing.page  index.page  label.page  limits.page  overview.page  preferences.page  search.page  shortcuts.page  star.page  write.page
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/id/: id.po
help/it/: it.po
help/kk/: kk.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sr/: sr.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
icons/: CMakeLists.txt  COPYING.icons  meson.build
sql/: CMakeLists.txt  Create.sql  Version-002.sql  Version-003.sql  meson.build  version-001.sql  version-004.sql  version-005.sql  version-006.sql  version-007.sql  version-008.sql  version-009.sql  version-010.sql  version-011.sql  version-012.sql  version-013.sql  version-014.sql  version-015.sql  version-016.sql  version-017.sql  version-018.sql  version-019.sql  version-020.sql  version-021.sql  version-022.sql  version-023.sql  version-024.sql  version-025.sql  version-026.sql  version-027.sql  version-028.sql  version-029.sql  version-030.sql
src/: CMakeLists.txt  application.rs  config.rs.in  geary-version.vala.in  main.rs  meson.build  static_resources.rs.in  utils.rs  wscript
src/client/: CMakeLists.txt  GearyApplication.vala  YorbaApplication.vala  client-action.vala  geary-application.vala  geary-args.vala  geary-config.vala  geary-controller.vala  gnome-keyring-mediator.vala  main.vala  meson.build  org.yorba.geary.gschema.xml  secret-mediator.vala  wscript_build
src/common/: common-arrays.vala  common-async.vala  common-date.vala  common-files.vala  common-international.vala  common-intl.vala  common-yorba-application.vala
src/console/: imap-console.ui  main.vala  meson.build  org.gnome.GearyConsole.gresource.xml  wscript_build
src/db-test/: main.vala  version-001.sql  version-002.sql  version-003.sql
src/dbusservice/: controller.vala  database.vala  dbus-conversation.vala  dbus-conversations.vala  dbus-email.vala  geary.xml  main.vala  wscript_build
src/engine/: Email.vala  Engine.vala  EngineFolder.vala  ImapEngine.vala  Interfaces.vala  Message.vala  meson.build
src/mailer/: main.vala  meson.build
src/norman/: main.vala  wscript_build
src/sqlite3-unicodesn/: CMakeLists.txt  Makefile  README  extension.c  fts3Int.h  fts3_unicode2.c  fts3_unicodesn.c  fts3_unicodesn.h  meson.build  static.c
src/tests/: lsmbox.vala  readmail.vala  syntax.vala  watchmbox.vala
src/theseus/: theseus.vala  wscript_build
src/widgets/: headerbar.rs  mod.rs  paginator.rs  window.rs
subprojects/vala-unit/: COPYING  README.md  meson.build  meson_options.txt
test/: CMakeLists.txt  README.md  main.vala  meson.build  mock-object.vala  run_test_env.sh  test-case.vala  test-client.vala  test-engine.vala  test-integration.vala  test-js.vala  test-server.vala  testcase.vala
test/container/: Dockerfile
test/data/: basic-multipart-alternative.eml  basic-multipart-tnef.eml  basic-text-html.eml  basic-text-plain.eml  geary-0.6-db.tar.xz  (+2 more)
ui/: CMakeLists.txt  accelerators.ui  account_cannot_remove.glade  account_list.glade  account_spinner.glade  accounts-editor-account-list-row.ui  accounts-mailbox-editor-dialog.ui  accounts-service-information-widget.ui  accounts-tls-combo-row.ui  accounts_editor.ui  accounts_editor_add_pane.ui  accounts_editor_edit_pane.ui  accounts_editor_list_pane.ui  accounts_editor_remove_pane.ui  accounts_editor_servers_pane.ui  ambiance.css  app_menu.interface  application-main-window.ui  certificate-warning-dialog.ui  certificate_warning_dialog.glade  client-web-view.js  components-attachment-pane.ui  components-attachment-view.ui  components-conversation-action-bar.ui  components-conversation-actions.ui  components-conversation-header-bar.ui  components-headerbar-application.ui  components-headerbar-conversation-list.ui  components-headerbar-conversation.ui  components-in-app-notification.ui  components-info-bar.ui  components-inspector-error-view.ui  components-inspector-log-view.ui  components-inspector-system-view.ui  components-inspector.ui  components-main-toolbar.ui  components-menu-application.ui  components-menu-conversation.ui  components-placeholder-pane.ui  components-preferences-dialog.ui  (+62 more)
(+1170 files in other folders)
