[package]
name = "gnome-tour"
version = "0.0.1"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2018"

[dependencies]
glib = "0.9"
gdk = "0.12"
gtk = { version = "0.8", features= ["v3_16"] }
gio = "0.8"
log = "0.4"
gettext-rs= { version = "0.4", features = ["gettext-system"] }

